--- a/ACLSwitch/config.json
+++ b/ACLSwitch/config.json
@@ -1,19 +1,22 @@
 #
 # ACL rules for acl_switch
 #
-# This file is used to specify roles and rules. The information is
+# This file is used to specify policies and rules. The information is
 # loaded on application start up.
 #
-# Note that roles should be provided first if they are needed.
+# Note that policies should be provided first if they are needed.
 #
-# To specify a role use:
-#   {"role":"<role name here>"}
+# To specify a policy use:
+#   {"policy":"<policy name here>"}
 #
 # To specify a rule use:
-#   {"rule":{"ip_src":"", "ip_dst":"", "tp_proto":"", "port_src":"", "port_dst":"", "role":""}}
+#   {"rule":{"ip_src":"", "ip_dst":"", "tp_proto":"", "port_src":"", "port_dst":"", "policy":""}}
+#
+# To specify a rule with time enforcement (where "time_duration is in seconds"):
+#   {"rule_time":{"ip_src":"", "ip_dst":"", "tp_proto":"", "port_src":"", "port_dst":"", "policy":"", "time_start":"", "time_duration":""}}
 #
 
-{"role":"gateway"}
-{"role":"quarantine"}
-{"rule":{"ip_src":"10.0.0.3", "ip_dst":"10.0.0.1", "tp_proto":"*", "port_src":"*", "port_dst":"*", "role":"quarantine"}}
-{"rule":{"ip_src":"10.0.0.1", "ip_dst":"10.0.0.2", "tp_proto":"tcp", "port_src":"*", "port_dst":"80", "role":"df"}}
+{"policy":"gateway"}
+{"policy":"quarantine"}
+{"rule":{"ip_src":"10.0.0.3", "ip_dst":"10.0.0.1", "tp_proto":"*", "port_src":"*", "port_dst":"*", "policy":"quarantine"}}
+{"rule":{"ip_src":"10.0.0.1", "ip_dst":"10.0.0.2", "tp_proto":"tcp", "port_src":"*", "port_dst":"80", "policy":"default"}}
