--- a/ACLSwitch/config.json
+++ b/ACLSwitch/config.json
@@ -20,3 +20,4 @@
 {"policy":"quarantine"}
 {"rule":{"ip_src":"10.0.0.3", "ip_dst":"10.0.0.1", "tp_proto":"*", "port_src":"*", "port_dst":"*", "policy":"quarantine"}}
 {"rule":{"ip_src":"10.0.0.1", "ip_dst":"10.0.0.2", "tp_proto":"tcp", "port_src":"*", "port_dst":"80", "policy":"default"}}
+{"rule_time":{"ip_src":"10.0.0.2", "ip_dst":"10.0.0.3", "tp_proto":"*", "port_src":"*", "port_dst":"*", "policy":"default", "time_start":"16:47", "time_duration":"60"}}
